--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <body>
     <h1>This is a first level heading</h1>
      <p>This is a paragraph. I don't like this.</p>
-     <p>This is another paragraph. If you couldn't tell.</p>
+     <p><i>This is another paragraph.</i> If you couldn't tell.</p>
      <p>Blah blah blah blah blah.</p>
-     <a href="https://www.gettysburg.edu">Gettysburg College has a pretty cool site.</a>
+    <a href="https://www.gettysburg.edu">Gettysburg College has a <b>pretty</b> cool site.</a>
+    <img src="Koala.jpg"/>
   </body>
 </html>
