--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
      <p><i>This is another paragraph.</i> If you couldn't tell.</p>
      <p>Blah blah blah blah blah.</p>
     <a href="https://www.gettysburg.edu">Gettysburg College has a <b>pretty</b> cool site.</a>
-    <p><img src="Koala.jpg"/></p>
+    <p><img src="Desert.jpg"/></p>
   </body>
 </html>
